--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "postcss-preset-env": "8.4.2"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "3.3.0"
+    "cz-conventional-changelog": "3.3.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-astro": "0.10.0"
   },
   "config": {
     "commitizen": {
