--- a/package.json
+++ b/package.json
@@ -36,7 +36,15 @@
     "postcss-preset-env": "8.4.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-astro": "0.27.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "0.10.0"
   },
