--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "starter",
     "blog"
   ],
-  "author": "C\u00e9dric Bontems <cedric@thewebforge.dev> (https://thewebforge.dev/)",
+  "author": "Cédric Bontems <cedric@thewebforge.dev> (https://thewebforge.dev/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cbontems/astroprops/issues"
@@ -45,12 +45,23 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
+    "lint-staged": "13.2.2",
     "prettier": "2.8.8",
-    "prettier-plugin-astro": "0.10.0"
+    "prettier-plugin-astro": "0.10.0",
+    "simple-git-hooks": "2.8.1"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --write ."
+    ]
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "preserveUnused": true
   }
 }
