--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/cbontems/astroprops#readme",
   "dependencies": {
     "astro": "2.5.7",
+    "astro-robots-txt": "0.5.0",
     "open-props": "1.5.8",
     "postcss-import": "15.1.0",
     "postcss-jit-props": "1.0.13",
