--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/cbontems/astroprops#readme",
   "dependencies": {
+    "@astrojs/sitemap": "1.3.3",
     "astro": "2.5.7",
     "astro-robots-txt": "0.5.0",
     "open-props": "1.5.8",
