docs: add lighthouse score report to readme

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "starter",
     "blog"
   ],
-  "author": "Cédric Bontems <cedric@thewebforge.dev> (https://thewebforge.dev/)",
+  "author": "Cédric Bontems <cedric@thewebforge.dev> (https://cedricbontems.fr/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cbontems/astroprops/issues"
