--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
   },
   "homepage": "https://astroprops.netlify.app/",
   "dependencies": {
+    "@astrojs/image": "0.16.9",
     "@astrojs/sitemap": "1.3.3",
     "astro": "2.5.7",
     "astro-robots-txt": "0.5.0",
     "open-props": "1.5.8",
     "postcss-import": "15.1.0",
     "postcss-jit-props": "1.0.13",
-    "postcss-preset-env": "8.4.2"
+    "postcss-preset-env": "8.4.2",
+    "sharp": "0.32.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.59.8",
@@ -50,7 +52,8 @@
     "lint-staged": "13.2.2",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "0.10.0",
-    "simple-git-hooks": "2.8.1"
+    "simple-git-hooks": "2.8.1",
+    "smartypants": "0.2.2"
   },
   "config": {
     "commitizen": {
@@ -58,8 +61,8 @@
     }
   },
   "lint-staged": {
-    "*": [
-      "prettier --write ."
+    "!(*.{png,jpg,jpeg,webp})": [
+      "prettier --plugin-search-dir=. --write"
     ]
   },
   "simple-git-hooks": {
