--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
-    }
-  }
+      "~/*": ["./src/*"]
+    },
+    "importsNotUsedAsValues": "remove"
+  },
+  "include": ["**/*", ".eslintrc.cjs"]
 }
