--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
   "dependencies": {
     "@astrojs/image": "0.16.9",
     "@astrojs/sitemap": "1.3.3",
+    "@astrojs/solid-js": "2.2.0",
     "astro": "2.5.7",
+    "astro-icon": "0.8.1",
     "astro-robots-txt": "0.5.0",
     "open-props": "1.5.8",
     "postcss-import": "15.1.0",
     "postcss-jit-props": "1.0.13",
     "postcss-preset-env": "8.4.2",
-    "sharp": "0.32.1"
+    "sharp": "0.32.1",
+    "solid-js": "1.7.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.59.8",
