--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "@typescript-eslint/parser": "5.59.8",
     "cz-conventional-changelog": "3.3.0",
+    "date-fns": "2.30.0",
     "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-astro": "0.27.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
+    "github-slugger": "2.0.0",
     "lint-staged": "13.2.2",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "0.10.0",
