--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://astroprops.netlify.app/",
   "dependencies": {
     "@astrojs/image": "0.16.9",
+    "@astrojs/rss": "2.4.3",
     "@astrojs/sitemap": "1.3.3",
     "@astrojs/solid-js": "2.2.0",
     "astro": "2.5.7",
