--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "postcss-import": "15.1.0",
     "postcss-jit-props": "1.0.13",
     "postcss-preset-env": "8.4.2",
+    "remark-collapse": "0.1.2",
+    "remark-toc": "8.0.1",
     "sharp": "0.32.1",
     "solid-js": "1.7.6"
   },
@@ -67,7 +69,7 @@
     }
   },
   "lint-staged": {
-    "!(*.{png,jpg,jpeg,webp})": [
+    "!(*.{png,jpg,jpeg,webp,xsl})": [
       "prettier --plugin-search-dir=. --write"
     ]
   },
